@@ -84,7 +84,7 @@ install_requires = [
     'exam>=0.5.1',
     'gunicorn>=19.2.1,<20.0.0',
     'ipaddr>=2.1.11,<2.2.0',
-    'logan>=0.5.8.2,<0.6.0',
+    'logan>=0.7.0,<0.8.0',
     'lxml>=3.4.1',
     'mock>=0.8.0',
     'nydus>=0.11.0,<0.12.0',
