@@ -5,7 +5,6 @@ sentry.db.exceptions
 :copyright: (c) 2010-2014 by the Sentry Team, see AUTHORS for more details.
 :license: BSD, see LICENSE for more details.
 """
-
 from __future__ import absolute_import
 
 
